--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,25 +1,34 @@
-# Use Python 3.9 slim image as base
-FROM python:3.9-slim
+# Build stage - compile dependencies
+FROM python:3.9-slim AS builder
 
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies for MySQL client
 RUN apt-get update \
-    && apt-get upgrade -y \
     && apt-get install -y gcc default-libmysqlclient-dev pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
 
-# Copy application code
-COPY . .
+# Runtime stage
+FROM python:3.9-slim
 
-# Expose application port
+WORKDIR /app
+
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends libmariadb3 curl \
+    && rm -rf /var/lib/apt/lists/* \
+    && groupadd -r -g 1000 flaskapp \
+    && useradd -r -u 1000 -g flaskapp flaskapp
+
+COPY --from=builder /install /usr/local
+COPY --chown=flaskapp:flaskapp . .
+
+USER flaskapp
+
 EXPOSE 5000
 
-# Run application with Gunicorn
-CMD ["gunicorn", "--config", "gunicorn.conf.py", "app:app"]
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+    CMD curl -f http://localhost:5000/health || exit 1
 
+CMD ["gunicorn", "--config", "gunicorn.conf.py", "app:app"]
