Fix workflow: remove unsupported task definition fields
- Filter out enableFaultInjection and other read-only fields
- Prevents task registration errors in GitHub Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,11 @@ jobs:
         run: |
           aws ecs describe-task-definition \
             --task-definition ${{ env.ECS_TASK_DEFINITION }} \
-            --query taskDefinition > task-definition.json
+            --query taskDefinition > task-def-raw.json
+
+          # Remove fields not supported by register-task-definition
+          jq 'del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy, .enableFaultInjection)' \
+            task-def-raw.json > task-definition.json
 
       - name: Update task definition with new image
         id: task-def
